Closed Bug 838759 Opened 13 years ago Closed 13 years ago

rm assertJit

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

The assertJit shell function is already a no-op with TI enabled, and it's causing baseline compiler test failures with --no-ti.
Attached patch PatchSplinter Review
Attachment #710861 - Flags: review?(bhackett1024)
Attachment #710861 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: