Bug 838759 - Remove assertJit shell function. r=bhackett