js/src/jit-test/tests/jaeger/bug563000/eif-call.js
@@ -2,11 +2,9 @@
 setDebug(true);
 
 function callee() {
-  assertJit();
   evalInFrame(1, "x = 'success'");
 }
 function caller() {
-  assertJit();
   var x = "failure";
   callee();
   return x;
