js/src/jit-test/tests/jaeger/bug563000/eif-global-newvar.js
@@ -2,7 +2,6 @@
 setDebug(true);
 
 function callee() {
-  assertJit();
   evalInFrame(1, "var x = 'success'");
 }
 callee();
