js/src/jit-test/tests/jaeger/bug563000/eif-trap-typechange.js
@@ -3,11 +3,10 @@ setDebug(true);
 
 function nop(){}
 function caller(obj) {
-  assertJit();
   var x = ({ dana : "zuul" });
   return x;
 }
-// 0 is the pc of "assertJit()", we want the pc of "return x", 2 lines below.
-var pc = line2pc(caller, pc2line(caller, 0) + 2);
+// 0 is the pc of the first line, we want the pc of "return x", on the next line.
+var pc = line2pc(caller, pc2line(caller, 0) + 1);
 trap(caller, pc, "x = 'success'; nop()");
 assertEq(caller(this), "success");
